(up) update home

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@ layout: default
 <div class='container'>
     <header class="masthead text-center">
 
-      <img class='img-responsive center-block' src="/images/people/KLab_Fall_2021.png" width="100%" height="100%" />
+      <img class='img-responsive center-block' src="/images/people/udn-meeting.jpeg" width="100%" height="100%" />
 
       <p>
-      <i>Causality and Machine learning. <br> Machine Learning and Deep Learning for Neuroscience.<br>
-      Neuroscience for Deep Learning.<br>
-      and Machine Learning for Movement/Meta-Science.</i>
+      <i>Human rare diseases. <br> Human Genetics.<br>
+      Cell culture.<br>
+      and Bioinformatics for rare diseases.</i>
 
         <span style="display: block; margin-bottom: 3em"></span>
 
-      <a href="https://github.com/KordingLab"><i class="fa fa-github"></i> KordingLab</a>&nbsp;&nbsp;&nbsp;
-      <a href="https://twitter.com/KordingLab"><i class="fa fa-twitter"></i> KordingLab</a>&nbsp;&nbsp;&nbsp;
-      <a href="mailto:kording@upenn.edu"><i class="fa fa-envelope-o"></i> kording@upenn.edu</a>
+      <a href="https://github.com/uclanelsonlab"><i class="fa fa-github"></i> KordingLab</a>&nbsp;&nbsp;&nbsp;
+      <a href="mailto:udn@mednet.ucla.edu"><i class="fa fa-envelope-o"></i> kording@upenn.edu</a>
       </p>
 
       <div class="w3-container" style="   background: #f0f8ff; padding: 25px; border-radius:10px; border: 1px solid #5d8aa8">
@@ -47,12 +46,12 @@ layout: default
       <span style="display: block; margin-bottom: 3em"></span>
 
 
-      <a class="twitter-timeline" href="https://twitter.com/KordingLab" data-widget-id="695051708246941697">Tweets by @KordingLab</a>
+      <!-- <a class="twitter-timeline" href="https://twitter.com/KordingLab" data-widget-id="695051708246941697">Tweets by @KordingLab</a> -->
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
       <span style="display: block; margin-bottom: 3em"></span>
-      Department of Bioengineering and Department of Neuroscience at University of Pennsylvania<br>
-      404 Richards Building, 3700 Hamilton Walk, Philadelphia, PA 19104
+      Department of Human Genetics at University of California Los Angeles<br>
+      Gonda, 695 Charles E Young Drive South, Los Angeles, CA 90095, US
       <span style="display: block; margin-bottom: 3em"></span>
 
     </header>
