--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
 
         <span style="display: block; margin-bottom: 3em"></span>
 
-      <a href="https://github.com/uclanelsonlab"><i class="fa fa-github"></i> KordingLab</a>&nbsp;&nbsp;&nbsp;
-      <a href="mailto:udn@mednet.ucla.edu"><i class="fa fa-envelope-o"></i> kording@upenn.edu</a>
+      <a href="https://github.com/uclanelsonlab"><i class="fa fa-github"></i> UCLANelsonLab</a>&nbsp;&nbsp;&nbsp;
+      <a href="mailto:udn@mednet.ucla.edu"><i class="fa fa-envelope-o"></i> udn@mednet.ucla.edu</a>
       </p>
 
       <div class="w3-container" style="   background: #f0f8ff; padding: 25px; border-radius:10px; border: 1px solid #5d8aa8">
